--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:theme="@style/Theme.AppTheme"
         android:fullBackupContent="false">
         <activity android:name=".ui.MainActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
